# dcc

./: .gitignore  CMakeLists.txt  README.md
scripts/: hash.py
src/: CMakeLists.txt  allocator.c  allocator.h  cpp.c  cpp.h  error.c  error.h  helper.c  helper.h  input_file.c  input_file.h  keyword_hashes.h  lexer.c  lexer.h  main.c  parser.c  parser.h  scratchpad.c  scratchpad.h  string_set.c  string_set.h  token_print.c
src/memory/: allocator.c  allocator.h  block_allocator.c  block_allocator.h  linear_allocator.c  linear_allocator.h  scratchpad.c  scratchpad.h  stack_allocator.h
test/: CMakeLists.txt
test/integration_test/: CMakeLists.txt  test_lexer.c
test/integration_test/data/: macro.c  macro2.c  test.c  test2.c
test/integration_test/lexer/: test_macro1.c
test/integration_test/lexer/common/: test_lexer.c  test_lexer.h
test/test_helpers/: CMakeLists.txt  test.c  test.h
test/unit_test/: CMakeLists.txt  test_block_allocator.c
